--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -12,37 +12,37 @@ body:
         ## Bug Report
         Please provide as much information as possible to help me reproduce and fix the bug.
 
-  - type: input
+  - type: textarea
     attributes:
       label: What is the bug you encountered?
       description: A clear and concise description of the issue.
       placeholder: e.g., The solution fails on large input values.
 
-  - type: input
+  - type: textarea
     attributes:
       label: Steps to reproduce
       description: What are the steps to reproduce the bug?
       placeholder: e.g., 1. Submit the input with X  2. Observe the crash
 
-  - type: input
+  - type: textarea
     attributes:
       label: Expected behavior
       description: What did you expect to happen?
       placeholder: e.g., The program should handle larger input efficiently.
 
-  - type: input
+  - type: textarea
     attributes:
       label: Actual behavior
       description: What happened instead?
       placeholder: e.g., The solution throws an error.
 
-  - type: input
+  - type: textarea
     attributes:
       label: Environment
       description: Specify the environment (OS, language version, etc.)
       placeholder: e.g., Ubuntu 20.04, Python 3.8
 
-  - type: input
+  - type: textarea
     attributes:
       label: Additional context
       description: Any other context that might be useful (e.g., logs, screenshots).
