--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -13,25 +13,25 @@ body:
         ## Feature Request
         We welcome new suggestions! Please describe the feature you'd like to see added to the repository.
 
-  - type: input
+  - type: textarea
     attributes:
       label: What feature would you like to request?
       description: A clear and concise description of what you are requesting.
       placeholder: e.g., Add a new problem on dynamic programming.
 
-  - type: input
+  - type: textarea
     attributes:
       label: Why is this feature important?
       description: Explain why this feature is needed and how it benefits the repository.
       placeholder: e.g., This will help users practice advanced DP techniques.
 
-  - type: input
+  - type: textarea
     attributes:
       label: How should the feature work?
       description: Describe how the feature should function or behave.
       placeholder: e.g., The problem should include multiple test cases and a clear problem statement.
 
-  - type: input
+  - type: textarea
     attributes:
       label: Additional context
       description: Any additional context or references you'd like to provide.
