--- a/.github/ISSUE_TEMPLATE/problem-submission.yml
+++ b/.github/ISSUE_TEMPLATE/problem-submission.yml
@@ -13,55 +13,55 @@ body:
         ## Problem Submission
         Please provide all necessary details for the new problem you would like to submit.
 
-  - type: input
+  - type: textarea
     attributes:
       label: Problem Title
       description: Provide a clear and concise title for the problem.
       placeholder: e.g., "Find the Maximum Subarray Sum"
 
-  - type: input
+  - type: textarea
     attributes:
       label: Problem Description
       description: Provide a detailed description of the problem. Include input/output format and examples.
       placeholder: e.g., "Given an array of integers, find the maximum sum of any contiguous subarray."
 
-  - type: input
+  - type: textarea
     attributes:
       label: Constraints
       description: Specify any constraints for the problem (e.g., input size, value limits).
       placeholder: e.g., "1 <= n <= 10^5, -10^3 <= arr[i] <= 10^3"
 
-  - type: input
+  - type: textarea
     attributes:
       label: Example Input
       description: Provide an example input for the problem.
       placeholder: e.g., "arr = [1, 2, 3, -1, -2, 3, 4]"
 
-  - type: input
+  - type: textarea
     attributes:
       label: Example Output
       description: Provide the expected output for the example input.
       placeholder: e.g., "6"
 
-  - type: input
+  - type: textarea
     attributes:
       label: Solution (optional)
       description: If you have a solution, feel free to include it.
       placeholder: Optional
 
-  - type: input
+  - type: textarea
     attributes:
       label: Difficulty Level
       description: Specify the difficulty level of the problem (e.g., easy, medium, hard).
       placeholder: e.g., "medium"
 
-  - type: input
+  - type: textarea
     attributes:
       label: Tags (optional)
       description: Provide tags for the problem (e.g., dynamic programming, arrays, etc.).
       placeholder: Optional
 
-  - type: input
+  - type: textarea
     attributes:
       label: Additional Notes (optional)
       description: Any extra notes or clarifications for the problem.
