Add foundational documentation files
- Introduced a Code of Conduct to establish community guidelines for respectful and inclusive contributions.
- Created Contributing Guidelines to outline steps for contributing, including branch naming conventions and commit message structure.
- Added a Frequently Asked Questions (FAQ) document to address common inquiries about the repository and its usage.
- Included a LICENSE file to clarify the repository's licensing under MIT.
- Established a Security Policy to guide users on reporting vulnerabilities and maintaining security best practices.
- Developed a Support document to assist users in seeking help and understanding repository functionalities.
- Updated issue template for problem submissions to standardize the format.

These additions aim to enhance collaboration, ensure a positive environment, and provide clear guidance for contributors and users.

--- a/.github/ISSUE_TEMPLATE/problem-submission.yml
+++ b/.github/ISSUE_TEMPLATE/problem-submission.yml
@@ -1,7 +1,7 @@
 name: "Problem Submission"
 description: "Submit a new coding problem to be added to the repository."
-title: "new problem: <brief description>"
-labels: ["new problem"]
+title: "new-problem: <brief description>"
+labels: ["new-problem"]
 
 assignees:
   - "mrasadatik"
